Made some changes to the CSS and managed to make tha JS to pick up the form data.

--- a/Website/Wonders of the world/Wonders.css
+++ b/Website/Wonders of the world/Wonders.css
@@ -50,10 +50,17 @@ img {
 
 a {
     text-decoration : none;
-    color : #000;
+    color : #38b8eb    ;
     font-style : italic;
 }
 
+p, a, form, button, h1, h2 {
+    font-family : sans-serif, courier;
+}
+
+p, a, form {
+    font-size : large;
+}
 /*
 Classes
 ---
@@ -68,6 +75,8 @@ Classes
     padding : 5px;
     border : 5px solid #7A7586;
     border-radius : 12px;
+
+/*    transform: skew(3deg,40deg);*/
 }
 
 .horizontalPos {
@@ -100,4 +109,21 @@ ID
     display : flex;
     flex-direction :column ;
     align-items : center;
+
+    position : fixed;
+    bottom : 1%;
+    left : 3%;
+    right : 3%;
+}
+
+#specialStuff {
+    background-color : #FFF;
+    width : min;
+    display : inline-block;
+    border : 1px solid black;
+    opacity : 0;
+}
+
+#specialStuff:hover {
+    opacity : 1;
 }
