--- a/Website/Wonders of the world/Wonders.css
+++ b/Website/Wonders of the world/Wonders.css
@@ -55,27 +55,15 @@ a {
     font-style: italic;
 }
 
-p,
-a,
-button,
-h1,
-h2,
-form {
+p, a, button, h1, h2, form {
     font-family: sans-serif, courier;
 }
 
-p,
-a,
-form {
+p, a, form {
     font-size: large;
 }
 
-p,
-a,
-form,
-button,
-h1,
-h2 {
+p, a, form, button, h1, h2 {
     font-family: sans-serif, courier;
 }
 
@@ -136,8 +124,6 @@ ID
     flex-direction: column;
     align-items: center;
 
-    position: fixed;
-    bottom: 1%;
     left: 3%;
     right: 3%;
 }
